--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ body {
   background-color: #4c84ff;
   color: white;
   text-align: center;
+  font-size:20px;
   padding: 2rem 1rem;
 }
 
@@ -22,6 +23,7 @@ body {
 }
 
 .nav-link {
+  font-size:20px;
   text-decoration: none;
   color: #333;
   font-weight: bold;
@@ -32,7 +34,7 @@ body {
 }
 
 .currency-page {
-  max-width: 600px;
+  max-width: 800px;
   margin: 2rem auto;
   padding: 1rem;
   border: 1px solid #ddd;
@@ -64,4 +66,9 @@ button {
 .result {
   font-weight: bold;
   font-size: 1.2rem;
+}
+
+#arrow {
+  margin-top:3px;
+  font-size: 25px;
 }
