--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,11 @@ body {
   padding: 0;
 }
 
+input, select {
+  padding: 0.5rem;
+  font-size: 1rem;
+}
+
 .title-container {
   background-color: #4c84ff;
   color: white;
@@ -14,26 +19,16 @@ body {
   padding: 2rem 1rem;
 }
 
-.navbar {
-  display: flex;
-  justify-content: center;
-  gap: 1rem;
-  background-color: #f4f4f4;
-  padding: 1rem;
-}
-
-.nav-link {
-  font-size:20px;
-  text-decoration: none;
-  color: #333;
-  font-weight: bold;
-}
-
-.nav-link:hover {
-  color: #4c84ff;
-}
-
 .currency-page {
+  max-width: 800px;
+  margin: 2rem auto;
+  padding: 1rem;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  background-color: #fafafa;
+}
+
+.mainpage-container {
   max-width: 800px;
   margin: 2rem auto;
   padding: 1rem;
@@ -49,12 +44,16 @@ body {
   margin-bottom: 1rem;
 }
 
-input, select {
-  padding: 0.5rem;
-  font-size: 1rem;
+.p-mp {
+  font-size:20px;
 }
 
-button {
+.result {
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+.button-cur {
   padding: 0.5rem 1rem;
   background-color: #4c84ff;
   color: white;
@@ -63,12 +62,13 @@ button {
   cursor: pointer;
 }
 
-.result {
-  font-weight: bold;
-  font-size: 1.2rem;
-}
-
 #arrow {
   margin-top:3px;
   font-size: 25px;
 }
+
+#header-text-mp {
+  text-align: center;
+  font-size:30px;
+}
+
