--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 body {
   background-color: #f4f4f4;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  width: 100%;
+  overflow-x:hidden;
 }
