--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #f4f4f4;
+  background-color: rgb(245, 245, 245);
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
