--- a/src/pages/RegistrationPage.module.css
+++ b/src/pages/RegistrationPage.module.css
@@ -1,4 +1,4 @@
-.mainLoginContainer {
+.mainRegisContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
@@ -7,11 +7,17 @@
    background-color: #f5f5f5;
 }
 
-.loginTitle {
+.RegisTitle {
    font-size: 35px;
    color: black;
    margin-bottom: 1rem;
    text-shadow: 2px 2px 5px rgb(94, 94, 94);
+}
+
+.RegisForm {
+   display: flex;
+   flex-direction: column;
+   gap: 1rem;
 }
 
 .formContainer {
@@ -20,12 +26,6 @@
    border-radius: 1rem;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    width: 300px;
-}
-
-.loginForm {
-   display: flex;
-   flex-direction: column;
-   gap: 1rem;
 }
 
 .inputGroup {
@@ -51,8 +51,6 @@
    gap: 0.5rem;
 }
 
-.loginButton,
-.forgotButton,
 .registerButton,
 .cancelButton {
    padding: 0.5rem;
@@ -63,38 +61,16 @@
    transition: background-color 0.3s;
 }
 
-.loginButton {
-   background-color: rgb(0, 123, 255);
-   color: white;
-}
-
-.loginButton:hover {
-   background-color: rgb(0, 86, 179);
-}
-
-.forgotButton {
-   background-color: rgb(255, 193, 7);
-   color: black;
-}
-
-.forgotButton:hover {
-   background-color: rgb(224, 168, 0);
-}
-
 .registerButton {
-   background-color: rgb(51, 203, 86);
+   background-color: rgb(47, 173, 131);
    color: white;
-}
-
-.registerButton:hover {
-   background-color: rgb(69, 160, 73);
 }
 
 .cancelButton {
-   background-color: rgb(108, 117, 125);
+   background-color: #6c757d;
    color: white;
 }
 
 .cancelButton:hover {
-   background-color: rgb(90, 98, 104);
+   background-color: #5a6268;
 }
