--- a/src/pages/RegistrationPage.module.css
+++ b/src/pages/RegistrationPage.module.css
@@ -4,7 +4,7 @@
    align-items: center;
    justify-content: center;
    height: 70vh;
-   background-color: #f5f5f5;
+   background-color: rgb(245, 245, 245);
 }
 
 .RegisTitle {
@@ -66,11 +66,15 @@
    color: white;
 }
 
+.registerButton:hover {
+   background-color: rgb(47, 173, 131);
+}
+
 .cancelButton {
-   background-color: #6c757d;
+   background-color: rgb(108, 117, 125);
    color: white;
 }
 
 .cancelButton:hover {
-   background-color: #5a6268;
+   background-color: rgb(90, 98, 104);
 }
